--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -8,7 +8,7 @@
 article {
   display: flex;
   flex-direction: column;
-  margin: 3em 0 3em 0;
+  margin: 0em 0 2em 0;
   border: 5px solid black;
 }
 
